--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<h5>February 2022 - Present</h5>
 									<ul>
 										<li>More than 203 project delivered till Feb 2023.</li>
-										<li>Handling more than 24 Tracker projects.</li>		<li>Worked with 22 consultants(Internalation) highest in the team.</li>
+										<li>Handling more than 24 Tracker projects.</li>		<li>Worked with 22 consultants(International) highest in the team.</li>
 										<li>Worked on 7 multi country studies(Max market 16).</li>
 										<li>SQA done for 22 projects, Data check done on 20 projects.</li>
 										<li>Biggest scripted Project with LOI of 60 min.</li>
@@ -92,7 +92,7 @@
 									<h5>February 2021 - February 2022</h5>
 									<ul>
 										<li>More than 132 project delivered till Feb 2022.</li>
-										<li>Handling more than 15 Tracker projects.</li>		<li>Worked with 17 consultants(Internalation) highest in the team.</li>
+										<li>Handling more than 15 Tracker projects.</li>		<li>Worked with 17 consultants(International) highest in the team.</li>
 										<li>Worked on 23 multi country studies(Max market 32).</li>
 										<li>Biggest scripted project with LOI of 20 min.</li>
 										<li>Creating easy to high-complex survey.</li>
