--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Nikhil Raj</h2>
-										<p>Senior Survey Programmer at Savanta.</p>
+										<p>Senior Survey Programmer at Walr.</p>
 									</header>
 									<p>I am a skilled and experienced survey programmer with over 3 years of experience in the market research industry. I possess expertise in survey design, programming, testing, and data analysis. A clear understanding of problems and solutions and training	in HTML, CSS and JAVASCRIPT. I have worked on several projects for various clients across industries.</p>
 								</div>
