--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/Cover_pic.jpg" alt="Cover photo Mountains and Nikhil" />
+									<img src="images/Cover_pic.jpg" alt="Do Something Great" />
 								</div>
 								<div class="container">
 									<header class="major">
